; ModuleID = '/home/carl/AnghaBench/h2o/lib/handler/extr_mimemap.c_h2o_mimemap_remove_type.c'
source_filename = "/home/carl/AnghaBench/h2o/lib/handler/extr_mimemap.c_h2o_mimemap_remove_type.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32 }

@extmap = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @h2o_mimemap_remove_type(%struct.TYPE_5__* %0, i8* %1) #0 {
  %3 = alloca %struct.TYPE_5__*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %3, align 8
  store i8* %1, i8** %4, align 8
  %8 = load i32, i32* @extmap, align 4
  %9 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %10 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = load i8*, i8** %4, align 8
  %13 = call i64 @kh_get(i32 %8, i32 %11, i8* %12)
  store i64 %13, i64* %5, align 8
  %14 = load i64, i64* %5, align 8
  %15 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %16 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = call i64 @kh_end(i32 %17)
  %19 = icmp ne i64 %14, %18
  br i1 %19, label %20, label %46

20:                                               ; preds = %2
  %21 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %22 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %21, i32 0, i32 0
  %23 = load i32, i32* %22, align 4
  %24 = load i64, i64* %5, align 8
  %25 = call i8* @kh_key(i32 %23, i64 %24)
  store i8* %25, i8** %6, align 8
  %26 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %27 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %26, i32 0, i32 0
  %28 = load i32, i32* %27, align 4
  %29 = load i64, i64* %5, align 8
  %30 = call i8* @kh_val(i32 %28, i64 %29)
  store i8* %30, i8** %7, align 8
  %31 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %32 = load i8*, i8** %7, align 8
  %33 = call i32 @on_unlink(%struct.TYPE_5__* %31, i8* %32)
  %34 = load i8*, i8** %7, align 8
  %35 = call i32 @h2o_mem_release_shared(i8* %34)
  %36 = load i32, i32* @extmap, align 4
  %37 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %38 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %37, i32 0, i32 0
  %39 = load i32, i32* %38, align 4
  %40 = load i64, i64* %5, align 8
  %41 = call i32 @kh_del(i32 %36, i32 %39, i64 %40)
  %42 = load i8*, i8** %6, align 8
  %43 = call i32 @h2o_mem_release_shared(i8* %42)
  %44 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %45 = call i32 @rebuild_typeset(%struct.TYPE_5__* %44)
  br label %46

46:                                               ; preds = %20, %2
  ret void
}

declare dso_local i64 @kh_get(i32, i32, i8*) #1

declare dso_local i64 @kh_end(i32) #1

declare dso_local i8* @kh_key(i32, i64) #1

declare dso_local i8* @kh_val(i32, i64) #1

declare dso_local i32 @on_unlink(%struct.TYPE_5__*, i8*) #1

declare dso_local i32 @h2o_mem_release_shared(i8*) #1

declare dso_local i32 @kh_del(i32, i32, i64) #1

declare dso_local i32 @rebuild_typeset(%struct.TYPE_5__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
